--- a/styles.css
+++ b/styles.css
@@ -42,8 +42,12 @@
       to { opacity: 1; }
     }
     @keyframes slideUpDown {
-      0% { justify-content: flex-start; }
-      100% { justify-content: flex-end; }
+      0% {
+        transform: translateY(0px)
+       }
+      100% { 
+        transform: translateY(16px) 
+      }
     }
 
     @keyframes fadeSlideUp {
@@ -85,7 +89,7 @@
       display: flex;
       gap: 20px;
     }
-    #navbar a {
+    #navbar a, .footer-div2 a{
       text-decoration: none;
       color: whitesmoke;
       font-weight: bold;
@@ -100,6 +104,7 @@
       width: 100%;
       overflow: hidden;
     }
+
     .hov-slider {
       background-color: orange;
       height: 100%;
@@ -108,6 +113,7 @@
       transform-origin: left;
       transition: transform 0.3s ease-in-out;
     }
+
     #navbar a:hover .hov-slider {
       transform: scaleX(1);
       transform-origin: left;
@@ -116,6 +122,7 @@
       transform: scaleX(0);
       transform-origin: right;
     }
+
     #nav-invite {
       color: white;
       font-weight: bold;
@@ -125,8 +132,8 @@
       align-items: flex-end;
     }
     .nav-invite-slider {
-      background-color: orange;
-      height: 1px;
+      background-color:  orange !important; 
+      height: 1.5px !important;
       width: 100%;
       margin-top: 2px;
     }
@@ -168,7 +175,7 @@
     .dropdown::before {
       content: '';
       position: absolute;
-      top: -8px;
+      top: -80px;
       left: 50%;
       transform: translateX(-50%);
       border-left: 8px solid transparent;
@@ -181,22 +188,24 @@
       cursor: pointer;
       gap: 4px;
     }
+
     .hamburger span {
       width: 25px;
       height: 3px;
       background-color: white;
       border-radius: 2px;
     }
+
     #mobile-menu {
       display: none;
       flex-direction: column;
       padding: 15px 20px;
       position: absolute;
-      top: 80px;
+      top: 100px;
       right: 0;
-      width: 90%;
+      width: 100%;
       z-index: 9;
-      background-color: rgba(255, 255, 255, 0.1);
+      /* background-color: rgba(255, 255, 255, 0.1); */
       backdrop-filter: blur(12px);
       -webkit-backdrop-filter: blur(12px);
       border-radius: 10px;
@@ -444,7 +453,8 @@
       color: white;
       border: none;
       cursor: pointer;
-      padding: 8px 12px;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      padding: 8px 5px;
       font-size: 20px;
       border-radius: 5px;
       background-color: transparent;
@@ -452,29 +462,33 @@
     .next {
       left: 80px;
     }
+
     #animated {
       display: none;
       border: 4px solid whitesmoke;
       flex-direction: column;
       justify-content: flex-start;
       align-items: center;
-      height: 50px;
-      width: 30px;
       border-radius: 25px;
       position: absolute;
-      bottom: 70px;
-      left: 50%;
+      bottom: 30px;
+      left: 45%;
       z-index: 10;
       padding: 5px;
-      animation: slideUpDown 0.5s linear alternate infinite;
+    }
+
+    #animated #animated-slider{
+      animation: slideUpDown 3s linear infinite;
     }
 
         /* Grid for sect4 */
         #sect4-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-template-columns: repeat(4, minmax(320px, 1fr));
+            grid-template-rows: 500px;
             gap: 18px;
             margin-top: 50px;
+            overflow-x: auto;
         }
 
         /* Individual grid item styling */
@@ -927,68 +941,88 @@
     }
 
     footer{
-            padding: 50px 25px;
+            padding: 100px 25px 0;
             display: flex;
             flex-direction: column;
-            gap: 50px
+            gap: 50px;
+            margin-bottom: 100px
         }
 
-        footer hr{
-            margin-bottom: 100px;
-            width: 100%;
-            justify-self: center;
-        }
-
-        #footer{
+        #footer-div1{
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-            height: 220px;
         }
 
-        #footer-logo{
-            transform: scale(1.25) translateY(10px)
+        #footer-div1-div2{
+          display: flex;
+          justify-content: center;
+          gap: 100px;
         }
 
-        #footer a{
+        #footer-div1 a{
             text-decoration: none;
             color: black;
         }
 
-        #footer-div1{
-            width: 45%;
-            display: flex;
-            flex-direction: column;
-            gap: 100px;
-        }
+        
 
         #footer-div2{
-            display: flex;
-            justify-content: space-between;
-            width: 50%;
+          display: flex;
+          flex-direction: column;
+          gap: 50px;
         }
 
-        .footer-div2-div{
+        .footer-div1-div{
             display: flex;
             flex-direction: column;
             gap: 15px;
             font-size: 16px;
         }
 
-        .footer-div2-div > p{
+        .footer-div1-div > p{
             color: grey;
             font-weight: bold;
         }
 
-    .footer-div2-div a:hover .hov-slider {
+        .footer-div1-div a{
+          display: flex;
+          flex-direction: column;
+          height: 50px;
+        }
+
+        .footer-div1-div a:hover .hov-slider {
+          transform: scaleX(1);
+          transform-origin: left;
+        }
+        .footer-div1-div a:not(:hover) .hov-slider {
+          transform: scaleX(0);
+          transform-origin: right;
+        }
+
+        /* .footer-div2-div a .hov-slider{
+          animation: slide-out 1.5s ease-in-out forwards;
+        } */
+
+    /* .footer-div2-div a:hover .hov-slider {
         width: 100%;
-    }
-    .footer-div2-div a:not(:hover) .hov-slider-cont {
+        
+    } */
+
+    /* .footer-div2-div a:not(:hover) .hov-slider-cont {
         justify-content: flex-end;
-    }
+    } */
 
 
     @media only screen and (max-width: 768px) {
+
+      #navbar{
+        display: none;
+      }
+      .hamburger {
+        display: flex;
+      }
+
       .text-overlay {
         bottom: 250px;
         left: 20px;
@@ -1015,8 +1049,12 @@
       .next {
         left: 70px;
       }
+
       #animated {
         display: flex;
+        border: 1.5px solid grey;
+        height: 45px;
+        width: 28px
       }
 
       #sect2-wrapper {
@@ -1063,13 +1101,6 @@
         align-items: flex-start;
       }
 
-      #navbar, #nav-invite {
-        display: none;
-      }
-      .hamburger {
-        display: flex;
-      }
-
       #sect2-text2 {
         flex-direction: column;
         align-items: flex-start; /* Align text to the left */
@@ -1096,9 +1127,8 @@
         line-height: 1.5;
     }
 
-
   #sect4-grid {
-        grid-template-columns: auto;
+        /* grid-template-columns: auto; */
         gap: 10px;
         margin-top: 70px;
     }
@@ -1168,17 +1198,20 @@
         font-size: 18px;
         margin-top: 30px;
         margin-bottom: 100px;
-      }#places-wrapper {
+      }
+      
+      #places-wrapper {
         flex-direction: column;
-        width: 95%;
-        margin: auto;
         position: relative;
+        margin: 100px auto;
       }
 
       #places-wrapper a {
         position: sticky;
         left: 0;
-        width: 100%;
+        width: 350px;
+        height: 500px;
+        margin: auto;
       }
 
       #places-wrapper a:nth-of-type(1) {
@@ -1227,13 +1260,14 @@
         }
 
         #footer{
-                flex-direction: column;
-                gap: 50px
+                justify-content: flex-start;
             }
 
-            #footer-div1, #footer-div2{
+          
+
+            /* #footer-div1, #footer-div2{
                 width: 100%;
-            }
+            } */
 
             .footer-div2-div{
                 font-size: 12px;
