--- a/styles.css
+++ b/styles.css
@@ -1019,6 +1019,10 @@
       #navbar{
         display: none;
       }
+
+      #logo img{
+        height: 40px;
+      }
       .hamburger {
         display: flex;
       }
