--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
     body {
       margin: 0;
       padding: 0;
+      max-width: 100vw;
       background-color: #f4f4f4;
       overflow-x: hidden;
     }
