--- a/styles.css
+++ b/styles.css
@@ -237,7 +237,7 @@
       flex-wrap: wrap;
       width: 100%;
       position: relative;
-      padding: 20px 0;
+      padding: 50px 0 100px;
     }
 
     #div1, #div2 {
@@ -269,10 +269,6 @@
       overflow-x: hidden;
       scrollbar-width: none;
       -ms-overflow-style: none;
-    }
-
-    #div2::-webkit-scrollbar {
-      display: none;
     }
 
     #div2 > img {
@@ -352,12 +348,12 @@
       margin-top: 5px;
     }
 
-    #invite-link:hover {
+    .invite-link:hover {
       color: #f8bd65;
       transition: 0.3s ease-in;
     }
 
-    #invite-link:hover .nav-invite-slider {
+    .invite-link:hover .nav-invite-slider {
       animation: slide-out 3s linear forwards;
     }
 
@@ -367,22 +363,22 @@
             justify-content: center;
             flex-wrap: wrap;
             padding: 20px 30px;
-            /* width: 100vw; */
+            padding: 50px 50px 100px;
         }
 
         #sect2-text2 p {
             font-size: 75px;
-            width: 55%;
+            width: 50%;
         }
 
         #sect2-text2 div {
-            width: 40%;
+            width: 50%;
             display: flex;
             justify-content: flex-end;
         }
 
         #sect2-text2 div p {
-            font-size: 16px;
+            font-size: 18px;
             width: 80%;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
@@ -560,6 +556,7 @@
       width: 100%;
       justify-content: space-between;
       padding: 20px 30px;
+      background-color: white;
     }
 
     /* Div1 and Div2 styles */
@@ -623,42 +620,55 @@
       margin-top: 5px;
     }
 
-    .slider-wrapper {
-      width: 100%;
+    /* .slider-wrapper {
+      min-width: 100%;
       overflow-x: hidden;
-    }
+      overflow-x: hidden
+    } */
 
     #people-container {
+      /* box-sizing: unset; */
       display: flex;
       gap: 20px;
-      
-      
-    }
+      justify-content: space-around;
+      transition: linear;
+      background-color: white;
+      padding: 20px;
+      overflow-x: scroll;
+      /* animation: slide-left 10s linear infinite; */
 
-    .slider-wrapper:hover #people-container {
-      animation-play-state: paused;
     }
 
     .person-card {
       position: relative;
-      width: 280px;
-      height: 465px;
+      width: 250px;
       background-color: #fff;
+      display: flex;
+      flex-direction: column;
       flex-shrink: 0;
-      /* padding: 10px; */
-      animation: slide-left 10s linear infinite;
+      animation: slide-left 3s linear infinite;
+      margin-bottom: 10px;
+      height: 400px;
+    }
+
+    #people-container:hover .person-card{
+      animation-play-state: paused;
     }
 
     .image-container {
       position: relative;
       width: 100%;
-      height: 290px;
+      height: 250px;
       transition: transform 0.3s ease;
     }
 
-    .person-card:hover .image-container {
-      transform: translateY(-20px);
+    .person-card:hover .image-container{
+      transform: translateY(-30px);
     }
+
+    /* .person-card:hover #people-container{
+      animation-play-state: paused;
+    } */
 
     .person-card img {
       width: 100%;
@@ -718,6 +728,23 @@
 
     .person-card:hover .see-more-btn {
       display: block;
+    }
+
+    #scroll-buttons{
+      display: flex;
+      justify-content: flex-end;
+      gap: 10px;
+      background: white;
+      padding: 10px 20px 50px;
+      margin-top: -15px;
+
+
+      .scroll-sideways{
+        font-size: 25px;
+        width: 55px;
+        height: 60px;
+        border: 1px solid orange;
+      }
     }
 
     /* Wrapper styles */
@@ -939,6 +966,42 @@
         font-size: 6rem;
         text-align: center;
         margin-top: 150px;
+    }
+
+    #just-b4-footer{
+      background: url('https://images.pexels.com/photos/5331858/pexels-photo-5331858.jpeg?auto=compress&cs=tinysrgb&w=600');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+      height: 1000px;
+      padding: 100px 50px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+    #just-b4-footer h2{
+      font-size: 100px;
+    }
+
+
+    #just-b4-footer-inner-cont{
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      font-size: 25px;
+      font-family: Helvetica
+    }
+
+    #just-b4-footer-inner-cont p:nth-of-type(1){
+      color: orange;
+      font-size: 30px;
+      
+    }
+
+    .invite-link{
+      color: black;
+      text-decoration: none;
     }
 
     footer{
@@ -1268,7 +1331,7 @@
         }
 
         #footer{
-                justify-content: flex-start;
+                flex-direction: column;
             }
 
           
