modified the sizes of the images in the image slider in the people section of the page

--- a/styles.css
+++ b/styles.css
@@ -147,6 +147,7 @@
       position: relative;
       display: flex;
       flex-direction: column;
+      cursor: pointer;
       /* border: 2px solid blue; */
 
     }
@@ -177,6 +178,7 @@
       /* margin-bottom: 10px; */
       background-color: white;
       padding: 10px 0;
+      padding: 10px 20px
     }
 
     #dropdown a > div{
@@ -226,7 +228,7 @@
       z-index: 9;
       /* background-color: rgba(255, 255, 255, 0.1); */
       backdrop-filter: blur(12px);
-      -webkit-backdrop-filter: blur(12px);
+      /* -webkit-backdrop-filter: blur(12px); */
       border-radius: 10px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.2);
       opacity: 0;
@@ -656,9 +658,8 @@
       justify-content: space-around;
       transition: linear;
       background-color: white;
-      padding: 20px;
+      padding: 50px;
       overflow-x: scroll;
-      /* animation: slide-left 10s linear infinite; */
 
     }
 
@@ -669,9 +670,9 @@
       display: flex;
       flex-direction: column;
       flex-shrink: 0;
-      animation: slide-left 3s linear infinite;
+      animation: slide-left 2s linear infinite;
       margin-bottom: 10px;
-      height: 400px;
+      /* height: 400px; */
     }
 
     #people-container:hover .person-card{
@@ -681,12 +682,12 @@
     .image-container {
       position: relative;
       width: 100%;
-      height: 250px;
+      /* height: 250px; */
       transition: transform 0.3s ease;
     }
 
     .person-card:hover .image-container{
-      transform: translateY(-30px);
+      transform: translateY(-40px);
     }
 
     /* .person-card:hover #people-container{
@@ -747,6 +748,7 @@
       font-weight: bold;
       cursor: pointer;
       font-size: 16px;
+      text-align: right;
     }
 
     .person-card:hover .see-more-btn {
