--- a/styles.css
+++ b/styles.css
@@ -760,14 +760,18 @@
       display: block;
     }
 
-
+    #second-scroll-buttons{
+      position: absolute;
+      background-color: white;
+      padding: 10px 20px;
+    }
 
     .scroll-buttons{
       display: flex;
       justify-content: flex-end;
       gap: 10px;
       background: white;
-      padding: 10px 20px 50px;
+      padding: 10px;
       margin-top: -18px;
       width: 100%;
     }
@@ -926,6 +930,7 @@
     }
 
     #cont-before-footer {
+      margin-top: 100px;
       position: relative;
       display: flex;
       justify-content: space-between;
@@ -987,6 +992,7 @@
       right: 0;
       z-index: 2;
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+      padding: 20px;
     }
 
       #div2-b4footer a{
@@ -1053,11 +1059,6 @@
       font-size: 30px;  
     }
 
-    /* .invite-link{
-      color: black;
-      text-decoration: none;
-    } */
-
     footer{
             padding: 100px 25px 0;
             display: flex;
@@ -1088,9 +1089,6 @@
           gap: 100px;
           margin-top: 50px;
         }
-
-
-        
 
         #footer-div2{
           display: flex;
@@ -1247,12 +1245,14 @@
   #sect4-grid {
         /* grid-template-columns: auto; */
         gap: 10px;
-        margin-top: 70px;
+        /* margin-top: 70px; */
         overflow-x: scroll;
     }
 
     #first-scroll-buttons{
       display: flex;
+      padding: 30px;
+      position: absolute;
     }
 
     .sect4-grid {
@@ -1261,7 +1261,7 @@
 
     .sect4-grid-overlay-text {
         font-size: 14px;
-        line-height: 20px;
+        line-height: 10px;
         margin: 10px 0;
     }
 
