--- a/styles.css
+++ b/styles.css
@@ -1029,11 +1029,23 @@
       background-repeat: no-repeat;
       background-position: center;
       height: 1000px;
-      padding: 100px 50px;
+      padding: 60px 20px;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      color: var(--text-white)
+      color: var(--text-white);
+      
+    }
+
+    #just-b4-footer #main-div{
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+    }
+
+    #just-b4-footer #main-div p{
+      font-size: 18px;
+      line-height: 25px;
     }
 
     #just-b4-footer h2{
@@ -1401,7 +1413,7 @@
         }
 
         #just-b4-footer h2{
-          font-size: 2rem;
+          font-size: 2.5rem;
         }
 
         #just-b4-footer-inner-cont{
