--- a/styles.css
+++ b/styles.css
@@ -128,7 +128,7 @@
       transform-origin: right;
     }
 
-    #nav-invite {
+    .nav-invite {
       color: var(--text-white);
       font-weight: bold;
       text-decoration: none;
@@ -143,7 +143,7 @@
       margin-top: 2px;
     }
     
-    #nav-invite:hover .nav-invite-slider {
+    .nav-invite:hover .nav-invite-slider {
       animation: slide-out 1.5s ease-in-out forwards;
     }
 
@@ -848,6 +848,7 @@
       display: flex;
       gap: 15px;
       width: 100vw;
+      margin-bottom: 100px;
     }
 
     #places-wrapper .img {
@@ -1029,7 +1030,7 @@
       background-repeat: no-repeat;
       background-position: center;
       height: 1000px;
-      padding: 60px 20px;
+      padding: 60px 40px;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -1040,12 +1041,14 @@
     #just-b4-footer #main-div{
       display: flex;
       flex-direction: column;
-      gap: 30px;
+      gap: 50px;
     }
 
     #just-b4-footer #main-div p{
       font-size: 18px;
       line-height: 25px;
+      width: 60%;
+      text-align: left;
     }
 
     #just-b4-footer h2{
@@ -1059,12 +1062,17 @@
       align-items: center;
       font-size: 25px;
       font-family: Helvetica;
-      
     }
 
-    #just-b4-footer-inner-content .inner-content{
-      border: 2px solid blue;
+    #just-b4-footer-inner-cont .inner-content{
       color: white;
+      border-right: 1px solid grey;
+      padding-right: 40px;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      gap: 50px;
+      align-items: center;
     }
 
     #just-b4-footer-inner-cont .inner-content p:nth-of-type(1){
@@ -1072,6 +1080,10 @@
       font-size: 30px;  
     }
 
+
+    #just-b4-footer-inner-cont > div:last-of-type{
+      border-right: none;
+    }
     footer{
             padding: 100px 25px 0;
             display: flex;
@@ -1140,7 +1152,7 @@
 
     @media only screen and (max-width: 768px) {
 
-      #navbar, #nav-invite{
+      #navbar, .nav-invite{
         display: none;
       }
 
@@ -1412,9 +1424,23 @@
             margin-top: -100px;
         }
 
-        #just-b4-footer h2{
-          font-size: 2.5rem;
+        #just-b4-footer{
+          gap: 100px;
+          padding: 30px;
         }
+
+        #just-b4-footer h2{
+          font-size: 3rem;
+        }
+
+        #just-b4-footer p{
+          font-size: 16px !important;
+        }
+
+        /* #just-b4-footer #main-div{
+         
+    
+        } */
 
         #just-b4-footer-inner-cont{
           flex-direction: column;
@@ -1425,17 +1451,17 @@
           gap: 20px;
         }
 
-        #invite-before-footer{
-          border: 2px solid red;
-          display: block !important;
-          color: black
+        #just-b4-footer .nav-invite{
+          color: black;
+          display: flex !important;
         }
 
         #just-b4-footer-inner-cont > div{
           width: 100%;
           text-align: center;
           padding-bottom: 20px;
-          border-right: unset;
+          padding-right: unset;
+          border-right: unset !important;
           border-bottom: 2px solid grey;
         }
 
