--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,30 @@
       }
     }
 
-    #nav-wrapper {
+   #nav-wrapper2{
+    /* border: 2px solid red; */
+    background-color: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1200;
+    margin-top: 0;
+    display: none;
+
+    .navbar a{
+      color: black
+    }
+
+    .nav-invite{
+      color: black
+    }
+
+    .hamburger span{
+      background: black;
+    }
+   } 
+
+    .nav-wrapper{
       display: flex;
       justify-content: space-around;
       align-items: center;
@@ -89,12 +112,13 @@
     #logo img {
       height: 60px;
     }
-    #navbar {
+
+    .navbar {
       display: flex;
       gap: 20px;
       align-items: center;
     }
-    #navbar a, .footer-div2 a{
+    .navbar a, .footer-div2 a{
       text-decoration: none;
       color: var(--text-white);
       font-weight: bold;
@@ -119,11 +143,11 @@
       transition: transform 0.3s ease-in-out;
     }
 
-    #navbar a:hover .hov-slider {
+    .navbar a:hover .hov-slider {
       transform: scaleX(1);
       transform-origin: left;
     }
-    #navbar a:not(:hover) .hov-slider {
+    .navbar a:not(:hover) .hov-slider {
       transform: scaleX(0);
       transform-origin: right;
     }
@@ -147,18 +171,18 @@
       animation: slide-out 1.5s ease-in-out forwards;
     }
 
-    #has-dropdown {
+    .has-dropdown {
       position: relative;
       display: flex;
       flex-direction: column;
       cursor: pointer;
     }
 
-    #has-dropdown:hover #dropdown{
+    .has-dropdown:hover .dropdown{
       display: flex;
     }
 
-    #dropdown {
+    .dropdown {
       position: absolute;
       top: 100%;
       left: 50%;
@@ -172,14 +196,14 @@
       padding: 20px 0 0 0;
     }
 
-    #dropdown > a{
+    .dropdown > a{
       display: grid;
       background-color: var(--bg-white);
       padding: 10px 0;
       padding: 10px 20px
     }
 
-    #dropdown a > div{
+    .dropdown a > div{
       color: black;
       font-size: 14px;
       display: flex;
@@ -190,11 +214,11 @@
       border-bottom: 1px solid var(--bg-gray);
     }
 
-    #dropdown a .nav-orange-text{
+    .dropdown a .nav-orange-text{
       color: orange 
     }
 
-    #dropdown a .nav-grey-text{
+    .dropdown a .nav-grey-text{
       color: gray;
       font-size: 14px;
     }
@@ -1160,7 +1184,7 @@
 
 
     @media only screen and (600px < width <= 1024px){
-      #navbar{
+      .navbar{
         display: none;
       }
 
@@ -1173,7 +1197,7 @@
 
     @media only screen and (max-width: 600px) {
 
-      #navbar, .nav-invite{
+      .navbar, .nav-invite{
         display: none;
       }
 
@@ -1290,12 +1314,14 @@
         gap: 10px;
         /* margin-top: 70px; */
         overflow-x: scroll;
+        position: relative;
     }
 
     #first-scroll-buttons{
       display: flex;
-      padding: 30px;
+      padding: 10px 30px;
       position: absolute;
+      /* background-color: var(--bg-gray); */
     }
 
     .sect4-grid {
