--- a/styles.css
+++ b/styles.css
@@ -541,7 +541,7 @@
             grid-template-columns: repeat(4, minmax(320px, 1fr));
             grid-template-rows: 500px;
             gap: 18px;
-            padding: 80px 0 20px;
+            padding-top: 80px;
             background: var(--bg-gray);
             /* overflow-x: scroll; */
         }
@@ -557,7 +557,7 @@
             background-size: cover;
             background-position: center;
             color: white;
-            height: 450px;
+            height: 400px;
             display: flex;
             flex-direction: column;
             justify-content: flex-end;
@@ -1325,7 +1325,7 @@
     }
 
     .sect4-grid {
-        height: 400px;
+        height: 350px;
     }
 
     .sect4-grid-overlay-text {
