--- a/thought_leaders/thought_leaders.css
+++ b/thought_leaders/thought_leaders.css
@@ -15,7 +15,13 @@ body{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     padding: 30px;
     background: var(--bg-gray);
-    position: relative;
+    /* position: relative; */
+}
+
+#nav-wrapper2{
+  position: fixed !important;
+  top: 0 !important;
+  left: 0 !important;
 }
 
 
@@ -35,7 +41,9 @@ span{
     width: 100%;
     gap: 50px 20px;
     margin: 70px auto;
-    background: var(--bg-gray)
+    background: var(--bg-gray);
+    position: relative !important;
+
 }
 
 .people-card{
@@ -43,9 +51,11 @@ span{
     text-align: left;
     display: flex;
     flex-direction: column;
-    position: relative;
+    /* position: relative; */
     cursor: pointer;
     gap: 10px;
+    height: 500px;
+    border: 2px solid red;
 
     .image{
         width: 100%;
@@ -56,7 +66,7 @@ span{
         align-items: center;
     }
 
-    .see-more, .overlay{
+    .see-more{
         display: none;
     }
 
@@ -66,21 +76,27 @@ span{
         width: 100px;
     }
 
+    .overlay{
+      display: none;
+      flex-direction: column;
+      gap: 10px;
+      background-color: #c7e8fd;
+      height: 500px; 
+    }
+
 }
 
-.overlay {
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity 0.5s ease-in-out;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(210, 238, 249);
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+
+
+.people-card:hover .overlay{
+  display: flex;
+  /* transform: translateY(-450px); */
+  /* position: absolute;
+  top: 0;
+  left: 0; */
+  
+
+
 }
 
 .people-card:hover .overlay {
@@ -166,5 +182,14 @@ footer{
       transform: scaleX(0);
       transform-origin: left;
       transition: transform 0.3s ease-in-out;
+    }
+
+
+
+    @media only screen and (max-width: 600px){
+      h1{
+        font-size: 25px;
+        text-align: center;
+      }
     }
 
